# digital_capacity_optimizer

./: .dockerignore  .editorconfig  .env  .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dashboard.py  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  __init__.py  agent_tools.py  ai_brain.py  app.py  azure_model.py  check_env.py  check_models.py  climate_finance.py  config.py  data_loader.py  database_schema.py  db_manager.py  docker-compose.observability.yml  esg_client.py  fix_db.py  forecast.py  forecaster.py  fta_macro.py  generate_csv.py  health_check.py  inventory_math.py  inventory_system.db  main.py  map_viz.py  (+20 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
.github/workflows/: ci_pipeline.yml  python-app.yml  wake_up.yml
.streamlit/: config.toml
core/: cache.py  security.py  signer.py  simulation.py  version.py
integrations/: b2b_fleet_contract.json
k8s/: deployment.yaml
pages/: 2_Agentic_Copilot.py  2_Decision_Support_Engine.py
repositories/: outbox.py
services/: agentic_broker.py  ai_service.py  dispatcher.py
tests/: locustfile.py  test_sanity.py
