[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lsp_digital_twin"
version = "4.2.5"
authors = [
  { name="Sandesh Hegde", email="s.sandesh.hegde@gmail.com" },
]
description = "A stochastic digital twin for logistics service providers (LSPs) featuring multi-modal routing."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "streamlit",
    "pandas",
    "numpy",
    "plotly",
    "scipy",
    "google-generativeai",
    "googlemaps",
    "geopy",
    "streamlit-searchbox",
    "python-dotenv"
]
